--- a/circle.yml
+++ b/circle.yml
@@ -1,8 +1,6 @@
-machine:
-  environment:
-    PATH: ~/.roswell/bin:$PATH
-
 dependencies:
+  cache_directories:
+    - ~/lisp
   pre:
     - curl -L https://raw.githubusercontent.com/snmsts/roswell/release/scripts/install-for-ci.sh | sh;
     - case $CIRCLE_NODE_INDEX in
@@ -11,9 +9,7 @@ dependencies:
            ros config set default.lisp ccl-bin ;;
       esac
     - ros run -- --version
-  override:
-    - ros -l ~/lisp/prove/prove.asd install prove
 
 test:
   override:
-    - if [ "$CIRCLE_NODE_INDEX" = 0 ]; then COVERALLS=true run-prove cl-bson-test.asd; else run-prove cl-bson-test; fi: {parallel: true}
+    - ros -s prove -e '(or (prove:run :cl-bson-test) (uiop:quit -1))': {parallel: true}
